--- a/src/components/rate-button/rate-button.pug
+++ b/src/components/rate-button/rate-button.pug
@@ -1,32 +1,10 @@
-mixin rate-button(n, name)
-  .rate(class=attributes.class)
-    if n == 1
-      input(type="radio" name=name class="rate__star" checked)
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-    if n == 2
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star" checked)
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star") 
-    if n == 3
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star" checked)
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-    if n == 4
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star" checked)
-      input(type="radio" name=name class="rate__star")
-    if n == 5
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star")
-      input(type="radio" name=name class="rate__star" checked)
+mixin rate-button(rating, name)
+  - let ratingCount = 0;
+  .rate
+    while ratingCount < 5
+      if ratingCount < rating
+        input(type="radio" name=name class="rate__star" checked)
+        - ratingCount++
+      else
+        input(type="radio" name=name class="rate__star")
+        - ratingCount++
