--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -20,7 +20,7 @@ mixin reservation-form(luxury)
       .reservation-form__prices
         .reservation-form__prices-item
           span.reservation-form__prices-item-text 9&nbsp;990₽ х 4 суток
-          span.reservation-form__prices-item-price 39&nbsp960₽
+          span.reservation-form__prices-item-price 39&nbsp;960₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
             |Сбор за услуги: скидка 2&nbsp;179₽
@@ -38,7 +38,7 @@ mixin reservation-form(luxury)
       .reservation-form__total
         span.reservation-form__total-text Итого
         .reservation-form__total-dashed
-        span.reservation-form__total-price 38&nbsp081₽
+        span.reservation-form__total-price 38&nbsp;081₽
       +button({
         "color": "arrow",
         "tag": "button",
