--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -10,7 +10,7 @@ block variables
   -const title= "Cards"
 
 block content
-  .content_card
+  .cards
     header.cards__header
       +logo()
     .cards__wrapper
