--- a/src/components/color-example/color-example.pug
+++ b/src/components/color-example/color-example.pug
@@ -1,4 +1,4 @@
-mixin color-exampmle({ code, color})
+mixin color-example({ code, color})
   -
     const classes = {
       "Dark Shade 100%": "color-example_color_dark-100",
