--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -184,5 +184,6 @@ block content
           .form-elements__block
             +about-room(aboutRoomItems)
         .form-elements__column.form-elements__column_size_l
-          .form-elements__block.form-elements__review
-            +review(review)
+          .form-elements__block
+            .form-elements__review
+              +review(review)
