--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -34,5 +34,5 @@ block content
             +color-example(color)
       .colors-types__column
         each type in types
-          .colors-type__type
+          .colors-types__type
             +type-example(type)
