change element name

--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,4 +1,4 @@
 mixin bullet-list(items)
   ul.bullet-list
     each item in items
-      li.bullet-list__items=item
+      li.bullet-list__item=item
