--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -4,7 +4,7 @@
   padding: 0;
   list-style: none;
 
-  &__items {
+  &__item {
     position: relative;
     padding-left: 20px;
     @extend %body-text;
