--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,12 +1,12 @@
 mixin dropdown(obj)
-  -const {label, items, container, holder, buttons, opened} = obj
+  -const {label, items, container, holder, buttons, expanded} = obj
   div(class=`dropdown ${container}`)
     p.dropdown__label= label
-    .dropdown__header.js-dropdown__header(class=`${opened && 'dropdown__header_active'}`)
+    .dropdown__header.js-dropdown__header(class=`${expanded && 'dropdown__header_active'}`)
       input(class="dropdown__text js-dropdown__text" readonly placeholder=holder type='text')
       button(class="dropdown__button-expand" type="button")
         img(src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
-    .dropdown__inner.js-dropdown__inner(class=`${opened && 'dropdown__inner_active'}`)
+    .dropdown__inner.js-dropdown__inner(class=`${expanded && 'dropdown__inner_active'}`)
       ul(class="dropdown__list")
         each el in items
           li(class="dropdown__item js-dropdown__item" data-type=el)
