--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -1,5 +1,5 @@
 .room-card {
-  max-width: 270px;
+  max-width: 350px;
   background-color: #fff;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -13,6 +13,9 @@
     position: relative;
 
     &-slide {
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
     }
