--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -75,11 +75,10 @@
 
   &__room-cards {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     width: 100%;
     margin-bottom: 40px;
     column-gap: 12px;
-    place-items: center;
     row-gap: 20px;
 
     @media screen and (max-width: $phoneWidth) {
