make class for slider

--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -98,7 +98,7 @@ block content
               +rating-button(5, "rating2")
         .form-elements__column
           .form-elements__block.form-elements__block_margin_l
-            +range-slider("Range Slider")
+            +range-slider({ label: "Range Slider", container: 'js-range-slider' })
           .form-elements__block.form-elements__block_margin_xl
             h3.form-elements__title Buttons
             .form-elements__buttons
