--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -27,7 +27,7 @@ block content
       .cards__column
         .cards__item
           +date-dropdown({ label1: 'прибытие', container: 'js-cards-date-dropdown' })
-        .cards__item
+        .cards__item.cards__item_size_s
           +room-card({luxury: true, number: 888, price: "9 900₽", star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
-        .cards__item
+        .cards__item.cards__item_size_s
           +room-card({luxury: false, number: 840, price: "9 900₽", star: 4, reviews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]})
