--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -17,6 +17,10 @@
   &__item {
     display: inline-block;
     margin-bottom: 40px;
+
+    &_size_s {
+      max-width: 270px;
+    }
   }
 
   &__column {
