--- a/src/components/input-text/input-text.pug
+++ b/src/components/input-text/input-text.pug
@@ -1,6 +1,6 @@
-mixin input-text({label, placeholder, mask = false, type = 'text'})
+mixin input-text({label, placeholder, maskContainer = false, type = 'text'})
   .input-text
     if label
       .input-text__title
         span.input-text__label= label
-    input(class=`input-text__input ${mask && 'js-input-text__input'}` type=type placeholder=placeholder autofocus=attributes.autofocus)
+    input(class=`input-text__input ${maskContainer || ''}` type=type placeholder=placeholder autofocus=attributes.autofocus)
