--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -27,7 +27,7 @@ block variables
       time: '5 дней назад',
       likes: '12',
       liked: true,
-      comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
+      comment: 'Великолепный матрас на&nbsp;кровати в&nbsp;основной спальне! А&nbsp;пуфик вообще потрясающий. И&nbsp;стены, действительно, шумоподавляющие. Выкрикивал комплименты повару&nbsp;&mdash; никто не&nbsp;жаловался из&nbsp;соседей.'
     }
 
     const checkboxList = [
@@ -60,7 +60,7 @@ block content
               buttons: true
             })
           .form-elements__block
-            +input-text({ label: 'masked text field', placeholder: 'ДД.ММ.ГГГГ', mask: true })
+            +input-text({ label: 'masked text field', placeholder: 'ДД.ММ.ГГГГ', maskContainer: 'js-input-text__input' })
           .form-elements__block.form-elements__block_margin_l
             +date-dropdown({ label1: 'date Dropdown', label2: 'date Dropdown', container: 'js-double-date' })
           .form-elements__block.form-elements__block_margin_l.form-elements__block_size_s
@@ -73,7 +73,7 @@ block content
             .form-elements__checkbox
               +checkbox('Можно курить')
               +checkbox('Можно с питомцами')(checked)
-              +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
+              +checkbox('Можно пригласить гостей (до&nbsp;10&nbsp;человек)')(checked)
           .form-elements__block.form-elements__block_margin_xl
             h3.form-elements__title Radio buttons
             .form-elements__radio
@@ -170,8 +170,8 @@ block content
           .form-elements__block.form-elements__block_size_s
             h3.form-elements__title rich Checkbox Buttons
             .form-elements__checkbox
-              +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
-              +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
+              +checkbox('Широкий коридор', 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.')
+              +checkbox('Помощник для инвалидов', 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.')
         .form-elements__column
           .form-elements__block
             h3.form-elements__title bullet list
