refactor header menu

--- a/src/components/header-menu/header-menu.pug
+++ b/src/components/header-menu/header-menu.pug
@@ -1,5 +1,5 @@
 mixin header-menu(items)
-  ul.header-menu
+  ul.header-menu.js-header-menu
     each item in items
       li.header-menu__item
         if item.submenu
