--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -41,7 +41,7 @@ block content
         .room-details__reviews
           .room-details__review-title
             h3.room-details__title Отзывы посетителей номера
-            span.room-details__review-count 2 отзыва
+            span.room-details__review-count 2&nbsp;отзыва
           each review in reviews
             +review(review)
         .room-details__bullet-list
