add non-breaking space

--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -53,12 +53,12 @@ block content
         .search-room__checkbox-wrapper
           +checkbox('Можно курить')
           +checkbox('Можно с питомцами')(checked)
-          +checkbox('Можно пригласить гостей (до 10 человек)')(checked)
+          +checkbox('ММожно пригласить гостей (до&nbsp;10&nbsp;человек)')(checked)
       .search-room__checkbox
         span.search-room__checkbox-title доступность
         .search-room__checkbox-wrapper
-          +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
-          +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
+          +checkbox('Широкий коридор', 'Ширина коридоров в&nbsp;номере не&nbsp;менее 91&nbsp;см.')
+          +checkbox('Помощник для инвалидов', 'На&nbsp;1&nbsp;этаже вас встретит специалист и&nbsp;проводит до&nbsp;номера.')
       .search-room__comfort
         +dropdown({
           label: 'удобства номера',
