--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -9,8 +9,18 @@ block variables
     const title= "Информация о номере"
 
     const reviews = [
-      {name: "Мурад Сарафанов", src: require("/src/assets/img/review/4el.jpg"), time: "5 дней назад", likes: "12", liked: true, comment: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."},
-      {name: "Патрисия Стёклышкова", src: require("/src/assets/img/review/tetka.jpg"), time: "Неделю назад", likes: "2", comment: "Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент"}
+      {
+        name: "Мурад Сарафанов",
+        src: require("/src/assets/img/review/4el.jpg"),
+        time: "5 дней назад",
+        likes: "12", liked: true,
+        comment: "Великолепный матрас на&nbsp;кровати в&nbsp;основной спальне! А&nbsp;пуфик вообще потрясающий. И&nbsp;стены, действительно, шумоподавляющие. Выкрикивал комплименты повару&nbsp;&mdash; никто не&nbsp;жаловался из&nbsp;соседей."},
+      {
+        name: "Патрисия Стёклышкова",
+        src: require("/src/assets/img/review/tetka.jpg"),
+        time: "Неделю назад",
+        likes: "2",
+        comment: "Обслуживание на&nbsp;высоте! Всё аккуратно, чисто. Завтраки в&nbsp;номер советую заказать, каждый день новое блюдо и&nbsp;десерт как комплимент."}
     ]
 
     const aboutRoomItems = [
