--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -53,7 +53,7 @@ block content
         .search-room__checkbox-wrapper
           +checkbox('Можно курить')
           +checkbox('Можно с питомцами')(checked)
-          +checkbox('ММожно пригласить гостей (до&nbsp;10&nbsp;человек)')(checked)
+          +checkbox('Можно пригласить гостей (до&nbsp;10&nbsp;человек)')(checked)
       .search-room__checkbox
         span.search-room__checkbox-title доступность
         .search-room__checkbox-wrapper
