--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -32,7 +32,7 @@ block variables
     ]
 block content
   .search-room
-    .search-room__filter
+    form.search-room__filter
       .search-room__date-filter
         +date-dropdown({ label1: 'даты пребывания в отеле', container: 'js-filter-date' })
       .search-room__guest
