--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -18,6 +18,16 @@
       object-position: center;
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
+      animation: fade 0.5s;
+
+      @keyframes fade {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
     }
 
     &-dots {
