--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -11,7 +11,17 @@
   font-weight: 400;
   font-family: 'Montserrat';
   font-style: normal;
-  src: url('/src/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
+  src: local('Montserrat'),
+    url('/src/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
     url('/src/assets/fonts/montserrat-regular-webfont.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: 'Material Icons';
+  font-style: normal;
+  src: local('Material Icons'), url('/src/assets/fonts/material-icons-regular.woff2') format('woff2'),
+    url('/src/assets/fonts/material-icons-regular.woff') format('woff');
   font-display: swap;
 }
